<resources>
    <string name="app_name">City GO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="bStart">Button</string>
    <string name="signOut">SignOut</string>
    <string name="start">Start</string>
    <string name="todo">TODO</string>
    <string name="menu_button">Menu</string>
    <string name="search_button">Search</string>
    <string name="search_field">Search for an event</string>
    <string name="show_events">Show Events</string>
    <string name="map">Map</string>
    <string name="logo">Logo</string>
    <string name="add_new_event">Add event</string>
    <string name="events_recycler">Events</string>
    <string name="add_event_layout">Add event layout</string>
    <string name="add_event_submit">Submit</string>
    <string name="im_in_check">Im in</string>
    <string name="exit">Exit</string>
</resources>